Fix align-items bug in Chrome

--- a/MovieTime.Web/ClientApp/views/movie/MovieDetailView.scss
+++ b/MovieTime.Web/ClientApp/views/movie/MovieDetailView.scss
@@ -49,11 +49,11 @@
   }
   .view__content__heading {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     height: 28vh;
     padding: 15px 0;
     margin-top: -15px;
-  }  
+  }
 }
 
 @media (min-width: $grid-md) {
